--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -16,8 +16,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install pylint
+          sudo apt-get install -y pylint
 
       - name: Analysing the code with pylint
         run: |
