feat: add ability to update map tagging from file

--- a/target-templates-update/launch_configuration.json
+++ b/target-templates-update/launch_configuration.json
@@ -2,5 +2,7 @@
     "copyPrivateIp": false,
     "copyTags": false,
     "launchDisposition": "STOPPED",
-    "targetInstanceTypeRightSizingMethod": "NONE"
+    "targetInstanceTypeRightSizingMethod": "NONE",
+    "enableMapAutoTagging": false,
+    "mapAutoTaggingMpeID": ""
 }
